--- a/MovieApp/Movies/MovieCell.xib
+++ b/MovieApp/Movies/MovieCell.xib
@@ -7,6 +7,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,9 +21,6 @@
                 <rect key="frame" x="0.0" y="0.0" width="346" height="179.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="9kJ-LV-7Bi">
-                        <rect key="frame" x="56" y="61" width="20" height="20"/>
-                    </activityIndicatorView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="tt3-sc-GMu">
                         <rect key="frame" x="16" y="11" width="314" height="158"/>
                         <subviews>
@@ -31,6 +29,7 @@
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AjC-9D-Zf8">
                                         <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                                        <color key="backgroundColor" name="gray3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="100" id="Dmi-My-9lW"/>
                                             <constraint firstAttribute="height" constant="120" id="ZZf-bQ-8tQ"/>
@@ -75,6 +74,9 @@
                             </stackView>
                         </subviews>
                     </stackView>
+                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="9kJ-LV-7Bi">
+                        <rect key="frame" x="56" y="61" width="20" height="20"/>
+                    </activityIndicatorView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="tt3-sc-GMu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="IE3-wW-xJP"/>
@@ -96,4 +98,9 @@
             <point key="canvasLocation" x="133" y="122"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="gray3">
+            <color red="0.83137254900000002" green="0.83137254900000002" blue="0.83137254900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
