--- a/MovieApp/Movies/Base.lproj/Main.storyboard
+++ b/MovieApp/Movies/Base.lproj/Main.storyboard
@@ -87,6 +87,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Dav-Bc-Ri2">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.086423277854919434" green="0.77242521444956458" blue="0.15347822507222494" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
